--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,7 +1,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.flutter_book_club">
+    package="com.example.book_club">
    <application
-        android:label="flutter_book_club"
+        android:label="book_club"
         android:name="${applicationName}"
         android:icon="@mipmap/ic_launcher">
         <activity
