--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,4 +1,4 @@
-name: flutter_book_club
+name: book_club
 description: A new Flutter project.
 
 # The following line prevents the package from being accidentally published to
@@ -34,9 +34,6 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
-  intl: ^0.17.0
-  provider: ^6.0.2
-  shrine_images: ^2.0.1
 
 dev_dependencies:
   flutter_test:
