아이폰에서 앱 확인하기
1. ios14+ 이상 확인을 위해 buildConfiguration Release로 변경
2. 카메라 사용 시 권한 받기

--- a/ex/camera_app/ios/Runner/Info.plist
+++ b/ex/camera_app/ios/Runner/Info.plist
@@ -24,6 +24,12 @@
 	<string>$(FLUTTER_BUILD_NUMBER)</string>
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
+	<!-- 카메라 권한 설정 -->
+	<key>NSCameraUsageDescription</key>
+	<string>To capture profile photo please grant camera access</string>
+	<key>NSPhotoLibraryUsageDescription</key>
+	<string>App needs access to photo lib for profile images</string>
+	<!-- //카메라 권한 설정 -->
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
 	<key>UIMainStoryboardFile</key>
